# classify_web_server

./: Cargo.toml  README.md
src/: main.rs
static/: index.html
