[package]
name = "ClassificationServer"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket-multipart-form-data = "0.10.7"
base64 = "0.13"
tempfile = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
log = "0.4"
env_logger = "0.10"
